# serializer version: 1
# name: TestOXDNAReading.test_comparing_topologies[top_new]
  list([
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].1
  list([
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].2
  list([
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].3
  list([
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom]
  list([
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].1
  list([
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].2
  list([
    8.0,
    8.0,
    8.0,
    8.0,
    8.0,
    8.0,
    9.0,
    9.0,
    9.0,
    9.0,
    9.0,
    9.0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].3
  list([
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old]
  list([
    list([
      0,
      1,
    ]),
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].1
  list([
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].2
  list([
    1.0,
    1.0,
    1.0,
    1.0,
    1.0,
    1.0,
    2.0,
    2.0,
    2.0,
    2.0,
    2.0,
    2.0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].3
  list([
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
    42,
  ])
# ---
# name: TestOXDNAReading.test_univ_snapshot
  [[-2.7e-03  3.5e-03  6.1e-03]
   [-2.8e-03  3.7e-03  5.7e-03]
   [-2.8e-03  4.0e-03  5.3e-03]
   [-2.7e-03  4.3e-03  5.0e-03]
   [-2.3e-03  4.6e-03  4.6e-03]
   [-1.9e-03  4.6e-03  4.3e-03]
   [-1.5e-03  4.5e-03  4.0e-03]
   [-1.4e-03  4.4e-03  3.4e-03]
   [-1.4e-03  4.2e-03  3.0e-03]
   [-1.6e-03  4.1e-03  2.5e-03]
   [-1.9e-03  4.2e-03  2.0e-03]
   [-1.6e-03  3.0e-03  9.0e-04]
   [-1.2e-03  2.8e-03  7.2e-04]
   [-7.7e-04  2.8e-03  4.1e-04]
   [-4.2e-04  3.0e-03  8.1e-05]
   [-1.3e-04  3.4e-03 -1.3e-04]
   [ 1.4e-04  3.8e-03 -1.6e-04]
   [ 5.4e-04  4.2e-03 -1.9e-05]
   [ 7.2e-04  4.4e-03  3.7e-04]
   [ 1.1e-03  4.6e-03  7.6e-04]
   [ 1.4e-03  4.5e-03  1.1e-03]
   [ 1.9e-03  4.5e-03  1.2e-03]
   [ 2.1e-03  4.4e-03  5.7e-05]
   [ 1.8e-03  4.0e-03  1.1e-04]
   [ 1.6e-03  3.7e-03  3.2e-04]
   [ 1.2e-03  3.4e-03  5.9e-04]
   [ 7.4e-04  3.4e-03  8.6e-04]
   [ 2.4e-04  3.5e-03  1.0e-03]
   [-1.8e-04  3.7e-03  1.0e-03]
   [-6.2e-04  3.9e-03  8.5e-04]
   [-9.7e-04  4.0e-03  3.9e-04]
   [-1.5e-03  3.8e-03  8.9e-05]
   [-1.7e-03  3.4e-03 -1.7e-04]
   [-2.1e-03  3.0e-03 -2.2e-04]
   [-2.3e-03  2.5e-03 -5.8e-06]
   [-2.7e-03  2.3e-03  3.2e-04]
   [-3.2e-03  2.3e-03  6.7e-04]
   [-3.5e-03  2.5e-03  1.0e-03]
   [-4.0e-03  2.8e-03  1.0e-03]
   [-4.6e-03  2.9e-03  9.7e-04]
   [-5.1e-03  2.9e-03  6.9e-04]
   [-5.4e-03  2.8e-03  3.4e-04]
   [-5.8e-03  2.5e-03  5.3e-05]
   [-6.0e-03  2.0e-03 -1.2e-04]
   [-6.0e-03  2.0e-03  1.1e-03]
   [-5.5e-03  1.8e-03  9.9e-04]
   [-5.1e-03  1.7e-03  7.3e-04]
   [-4.7e-03  1.8e-03  4.0e-04]
   [-4.3e-03  2.1e-03  1.1e-04]
   [-4.1e-03  2.5e-03 -1.5e-04]
   [-3.7e-03  2.9e-03 -2.3e-04]
   [-3.3e-03  3.3e-03 -3.4e-05]
   [-3.0e-03  3.5e-03  3.7e-04]
   [-2.6e-03  3.4e-03  7.2e-04]
   [-2.1e-03  3.2e-03  9.3e-04]
   [-2.1e-03  4.6e-03  1.6e-03]
   [-2.2e-03  5.1e-03  1.4e-03]
   [-2.3e-03  5.5e-03  1.4e-03]
   [-2.1e-03  6.1e-03  1.3e-03]
   [-1.7e-03  6.5e-03  1.2e-03]
   [-1.4e-03  6.7e-03  8.6e-04]
   [-9.9e-04  6.7e-03  5.3e-04]
   [-6.8e-04  6.8e-03  8.2e-05]
   [-6.4e-04  6.8e-03 -4.7e-04]
   [-7.8e-04  6.9e-03 -9.7e-04]
   [-9.4e-04  7.1e-03 -1.4e-03]
   [-1.0e-03  7.6e-03 -1.6e-03]
   [-8.0e-04  8.0e-03 -1.8e-03]
   [-1.6e-03  8.9e-03 -1.9e-03]
   [-1.4e-03  8.2e-03 -2.6e-03]
   [-1.8e-03  8.4e-03 -3.2e-03]
   [-1.4e-03  8.4e-03 -3.1e-03]
   [-9.0e-04  8.3e-03 -2.9e-03]
   [-6.0e-04  8.7e-03 -2.7e-03]
   [-6.2e-04  9.1e-03 -2.5e-03]
   [-5.5e-04  9.3e-03 -2.0e-03]
   [-6.2e-04  7.9e-03 -6.4e-04]
   [-1.0e-03  7.9e-03 -4.1e-04]
   [-1.5e-03  7.5e-03 -3.7e-04]
   [-1.8e-03  7.0e-03 -3.9e-04]
   [-1.8e-03  6.5e-03 -1.8e-04]
   [-1.7e-03  6.0e-03 -3.9e-05]
   [-1.5e-03  5.7e-03  2.3e-04]
   [-1.2e-03  5.6e-03  6.1e-04]
   [-1.1e-03  5.4e-03  1.1e-03]
   [-1.1e-03  5.3e-03  1.6e-03]
   [-1.2e-03  5.2e-03  2.1e-03]
   [-1.5e-03  5.2e-03  2.5e-03]
   [-2.0e-03  5.2e-03  2.8e-03]
   [-2.3e-03  4.9e-03  3.0e-03]
   [-2.6e-03  4.5e-03  3.4e-03]
   [-2.6e-03  4.0e-03  3.7e-03]
   [-2.4e-03  3.6e-03  4.1e-03]
   [-2.1e-03  3.5e-03  4.4e-03]
   [-1.8e-03  3.5e-03  4.8e-03]
   [-1.7e-03  3.7e-03  5.3e-03]
   [-1.7e-03  4.1e-03  5.7e-03]
   [-1.9e-03  4.4e-03  6.1e-03]]
# ---
# name: TestOXDNAReading.test_univ_snapshot.1
  ['C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C'
   'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C'
   'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C'
   'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C'
   'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C'
   'C' 'C' 'C' 'C' 'C' 'C' 'C' 'C']
# ---
# name: TestOXDNAReading.test_univ_snapshot.2
  [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: TestOXDNAReading.test_univ_snapshot.3
  [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2
   2 2 2 2 2 2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3
   3 3 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4]
# ---
